--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
     <header>
         <title>about me</title>
-    </header>
+        <link rel="stylesheet" href="main.css">
+    </head>
     <body>
-        
+        <div class="parent">
+            <div class="text">
+                <h1>Who is Hannah Suh?</h1><br>
+                <h3>Great question.</h3><br>
+                <p>Hannah is studying design at The New School. Outside of classes, she is usually working on ceramics, making coffee, or playing animal crossing. Mostly the latter.</p>
+            </div>
+        </div>
     </body>
 </html>
