--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <body>
         <div class="parent">
             <div class="text">
-                <h1>Who is Hannah Suh?</h1><br>
+                <h1>Who is Hannah Suh?</h1>
                 <h3>Great question.</h3><br>
                 <p>Hannah is studying design at The New School. Outside of classes, she is usually working on ceramics, making coffee, or playing animal crossing. Mostly the latter.</p>
             </div>
         </div>
+
+        <nav>
+            <a class="inline" href="google.com"><img src="images/icons8-email-64.png"></a>
+            <a class="inline" href="google.com"><img src="images/icons8-instagram-250.png"></a>
+            <a class="inline" href="google.com"><img src="images/icons8-website-512.png"></a>
+        </nav>
     </body>
 </html>
