--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
             </div>
         </div>
 
+        <div class="image-container">
+            <img class="me" src="images/DSC_1585.JPG">
+        </div>
+
         <nav>
-            <a class="inline" href="google.com"><img src="images/icons8-email-64.png"></a>
-            <a class="inline" href="google.com"><img src="images/icons8-instagram-250.png"></a>
-            <a class="inline" href="google.com"><img src="images/icons8-website-512.png"></a>
+            <a class="inline" href="mailto:hsuh@newschool.edu"><img class="icons" src="images/icons8-email-64.png"></a>
+            <a class="inline" href="https://www.instagram.com/hannah_suh_/"><img class="icons" src="images/icons8-instagram-250.png"></a>
+            <a class="inline" href="https://www.instagram.com/hannah_suh_"><img class="icons" src="images/icons8-website-512.png"></a>
         </nav>
     </body>
 </html>
